# plug-and-trust

./: ChangeLog.md  LICENSE.txt  README.rst  SBOM.json  SBOM.spdx.json  SCR.txt  fsl_sss_ftr.h  simw_lib.cmake  simwlib_cmake_options.cmake
demos/ksdk/common/boards/DK6/: board.c  board.h  clock_config.c
demos/ksdk/common/boards/DK6/wireless_examples/chip/: board.h  pin_mux.c
demos/ksdk/common/freertos/: FreeRTOSConfig.c
demos/se051h_nfc_comm_prov/: readme.md
demos/se051h_nfc_comm_prov/cmake_build/: CMakeLists.txt  main.c
demos/se051h_nfc_comm_prov/common/: se051h_nfc_comm_prov.cpp  se051h_nfc_comm_prov.h
demos/se051h_nfc_comm_prov/linux/: BUILD.gn  main.cpp
demos/se051h_nfc_comm_prov/rw61x/: CMakeLists.txt  Kconfig  main.cpp
demos/se05x_dev_attest_key_prov/: readme.md
demos/se05x_dev_attest_key_prov/common/: se05x_dev_attest_key_prov.cpp  se05x_dev_attest_key_prov.h
demos/se05x_dev_attest_key_prov/linux/: main.cpp
demos/se05x_dev_attest_key_prov/rw61x/: CMakeLists.txt  Kconfig  main.cpp  prj.conf
demos/se05x_get_passcode/: readme.md
demos/se05x_get_passcode/common/: se05x_get_passcode.cpp  se05x_get_passcode.h
demos/se05x_get_passcode/linux/: BUILD.gn  main.cpp
demos/se05x_host_gpio/: se05x_host_gpio.c  se05x_host_gpio.h
demos/se05x_read_cert/common/: se05x_read_cert.cpp  se05x_read_cert.h
demos/se05x_read_cert/linux/: BUILD.gn  main.cpp
demos/se05x_t4t_provision/common/: se05x_t4t_provision.cpp  se05x_t4t_provision.h
demos/se05x_t4t_provision/linux/: main.cpp
ecc_example/: CMakeLists.txt
ext/jrcplib/: CMakeLists.txt
ext/jrcplib/inc/jrcplib/: api.h  data_types.h  device.h  deviceregistry.h  errors.h  jrcplib.h  messages.h
ext/jrcplib/inc/jrcplib/networking/: tcpclient.h
ext/jrcplib/src/jrcplib/cpp/: device.cpp  deviceregistry.cpp  errors.cpp  jrcplib.cpp  messages_base.cpp  messages_exported.cpp  messages_specialized.cpp  utils.cpp
ext/jrcplib/src/jrcplib/cpp/networking/: tcpclient.cpp
ext/jrcplib/src/jrcplib/include/: utils.h
ext/jrcplib/src/jrcplib/include/network/: server.h
feature_file/scp03_ftr/: fsl_sss_ftr.h
hostlib/hostLib/inc/: Applet_SE050_Ver.h  PlugAndTrust_HostLib_Ver.h  PlugAndTrust_Pkg_Ver.h  nxEnsure.h  nxScp03_Apis.h  nxScp03_Const.h  nxScp03_Types.h  scp.h  se05x_const.h  se05x_ecc_curves.h  se05x_ecc_curves_inc.h  se05x_ecc_curves_values.h  se05x_enums.h  se05x_ftr.h  se05x_tlv.h  sm_const.h
hostlib/hostLib/libCommon/infra/: app_boot.h  global_platf.c  global_platf.h  nxLog.c  sm_apdu.c  sm_apdu.h  sm_api.h  sm_connect.c  sm_errors.c  sm_errors.h  sm_printf.c  sm_types.h
hostlib/hostLib/libCommon/log/: nxLog.c  nxLog.h  nxLog_App.h  nxLog_DefaultConfig.h  nxLog_hostLib.h  nxLog_mbedtls.h  nxLog_scp.h  nxLog_smCom.h  nxLog_sss.h
hostlib/hostLib/libCommon/nxScp/: nxScp03_Com.c
hostlib/hostLib/libCommon/smCom/: apduComm.h  smCom.c  smCom.h  smComJRCP.c  smComJRCP.h  smComT1oI2C.c  smComT1oI2C.h
hostlib/hostLib/libCommon/smCom/T1oI2C/: phEseStatus.h  phEseTypes.h  phNxpEsePal_i2c.c  phNxpEsePal_i2c.h  phNxpEseProto7816_3.c  phNxpEseProto7816_3.h  phNxpEse_Api.c  phNxpEse_Api.h  phNxpEse_Internal.h
hostlib/hostLib/platform/generic/: sm_timer.c
hostlib/hostLib/platform/inc/: ax_reset.h  i2c_a7.h  se05x_apis.h  se05x_reset_apis.h  sm_printf.h  sm_timer.h
hostlib/hostLib/platform/ksdk/: i2c_dk6.c  se05x_reset.c  timer_kinetis.c  timer_kinetis_bm.c  timer_kinetis_freertos.c
hostlib/hostLib/platform/linux/: i2c_a7.c
hostlib/hostLib/platform/rsp/: se05x_reset.c
hostlib/hostLib/platform/rt/rw61x/: i2c_rw612.c
hostlib/hostLib/se05x/src/: se05x_ECC_curves.c  se05x_mw.c  se05x_tlv.c
hostlib/hostLib/se05x_03_xx_xx/: se05x_04_xx_APDU_apis.h  se05x_04_xx_APDU_impl.h  se05x_APDU.c  se05x_APDU.h  se05x_APDU_apis.h  se05x_APDU_impl.h  se05x_T4T_APDU_apis.h  se05x_T4T_APDU_impl.h  se05x_pake_APDU_apis.h  se05x_pake_APDU_impl.h  se05x_spake_APDU_apis.h  se05x_spake_APDU_impl.h
matter/: CMakeLists.txt  Kconfig
matter/mcux/: module.yml
mbedtls_cli_srv/: CMakeLists.txt
scp03_ftr/: fsl_sss_ftr.h
sss/ex/ecc/: ex_sss_ecc.c
sss/ex/inc/: ex_sss.h  ex_sss_auth.h  ex_sss_boot.h  ex_sss_main_inc.h  ex_sss_main_inc_k32w061dk6.h  ex_sss_main_inc_ksdk.h  ex_sss_main_inc_linux.h  ex_sss_objid.h  ex_sss_ports.h  ex_sss_scp03_keys.h  ex_sss_tp_scp03_keys.h
sss/ex/mbedtls/: ex_sss_ssl2.c
sss/ex/src/: ex_sss_boot.c  ex_sss_boot_connectstring.c  ex_sss_boot_direct.c  ex_sss_boot_freertos.c  ex_sss_boot_int.h  ex_sss_scp03_auth.c  ex_sss_se05x.c  ex_sss_se05x_auth.c
sss/inc/: fsl_sscp.h  fsl_sss_api.h  fsl_sss_api_ver.h  fsl_sss_config.h  fsl_sss_ftr.h.in  fsl_sss_ftr_default.h  fsl_sss_keyid_map.h  fsl_sss_lpc55s_apis.h  fsl_sss_mbedtls_apis.h  fsl_sss_mbedtls_types.h  fsl_sss_openssl_apis.h  fsl_sss_openssl_types.h  fsl_sss_policy.h  fsl_sss_se05x_apis.h  fsl_sss_se05x_policy.h  fsl_sss_se05x_scp03.h  fsl_sss_se05x_types.h  fsl_sss_sscp.h  fsl_sss_user_apis.h  fsl_sss_user_types.h  fsl_sss_util_asn1_der.h  fsl_sss_util_rsa_sign_utils.h
sss/plugin/mbedtls/: ecdh_alt_ax.c  ecdsa_verify_alt.c  sss_mbedtls.c  sss_mbedtls.h  sss_mbedtls_rsa.c  sss_mbedtls_x86_config.h
sss/port/default/: fsl_sss_types.h
sss/src/: fsl_sss_apis.c  fsl_sss_util_asn1_der.c  fsl_sss_util_rsa_sign_utils.c
sss/src/keystore/: keystore_cmn.c  keystore_openssl.c  keystore_pc.c
sss/src/mbedtls/: fsl_sss_mbedtls_apis.c
sss/src/openssl/: fsl_sss_openssl_apis.c
sss/src/se05x/: fsl_sss_se05x_apis.c  fsl_sss_se05x_eckey.c  fsl_sss_se05x_mw.c  fsl_sss_se05x_policy.c  fsl_sss_se05x_scp03.c
